added service to load pattern data from firebase RESTful APIs

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,10 @@
 	<script src="vendor/angular-ui/angular-ui-router.js"></script>
 	<script src="vendor/angular-ui/angular-ui-ace.js"></script>
 	<script src="vendor/angular-bindonce/bindonce.js"></script>
+<!-- JS:FIREBASE
+	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+	<script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+ -->
 <!-- JS:FAMOUS
 	<script src="vendor/famous/famous-global.js"></script>
 	<script src="vendor/famous-angular/famous-angular.js"></script>
@@ -45,6 +49,8 @@
  -->
 <!-- JS:APP -->
 	<script src="js/playground.js"></script>
+	<script src="js/services.js"></script>
+	<script src="js/home-ctrl.js"></script>
 	<script src="js/pattern-ctrl.js"></script>
 </body>
 </html>
