--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
 	<script src="vendor/js/jquery-1.8.3.min.js"></script>
 	<script src="vendor/js/ace/ace.js"></script>
 	<script src="vendor/js/beautify-html.js"></script>
+	<script src="vendor/js/htmlminifier/htmlminifier.min.js"></script>
 <!-- JS:NG -->
 	<script src="vendor/js/angular/angular.js"></script>
 	<script src="vendor/js/angular/angular-animate.js"></script>
