--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="app">
 <!-- VIEW -->
-	<div ui-view></div>
+	<div class="app-view" ui-view></div>
 <!-- JS:LIB -->
 	<script src="vendor/js/modernizr-2.8.3.min.js"></script>
 	<script src="vendor/js/jquery-1.8.3.min.js"></script>
