added pattern info in settings panel

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="format-detection" content="telephone=no">
+<!-- CSS:FONTS -->
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900">
 <!-- CSS:RESET -->
 	<link rel="stylesheet" href="vendor/css/normalize.css">
 <!-- CSS:ASSETS -->
