completed pattern info styling displaying and title editing

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 <!-- CSS:ASSETS -->
 	<link rel="stylesheet" href="vendor/css/ionicons/css/ionicons.min.css">
 <!-- CSS:NG -->
-	<link rel="stylesheet" href="vendor/js/angular/angular-csp.css">
+	<link rel="stylesheet" href="vendor/js/angular-1.3.6/angular-csp.css">
 <!-- CSS:FAMOUS
 	<link rel="stylesheet" href="vendor/js/famous/famous.css">
 	<link rel="stylesheet" href="vendor/js/famous-angular/famous-angular.css">
