updated dash control and services

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 <!-- JS:APP -->
 	<script src="js/playground.js"></script>
 	<script src="js/services.js"></script>
-	<script src="js/home-ctrl.js"></script>
+	<script src="js/dash-ctrl.js"></script>
 	<script src="js/pattern-ctrl.js"></script>
 </body>
 </html>
