--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
  -->
 <!-- JS:APP -->
 	<script src="js/playground.js"></script>
+	<script src="js/filters.js"></script>
 	<script src="js/services.js"></script>
 	<script src="js/dash-ctrl.js"></script>
 	<script src="js/pattern-ctrl.js"></script>
