--- a/app/index.html
+++ b/app/index.html
@@ -42,10 +42,9 @@
 	<script src="vendor/js/angular-1.3.6/angular-resource.js"></script>
 	<script src="vendor/js/angular-ui/angular-ui-router.js"></script>
 	<script src="vendor/js/angular-ui/angular-ui-ace.js"></script>
-<!-- JS:FIREBASE
-	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-	<script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
- -->
+<!-- JS:FIREBASE -->
+	<script src="https://cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
+	<!-- <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script> -->
 <!-- JS:FAMOUS
 	<script src="vendor/js/famous/famous-global.js"></script>
 	<script src="vendor/js/famous-angular/famous-angular.js"></script>
