updated URL references to without protocal

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="format-detection" content="telephone=no">
 <!-- CSS:FONTS -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:300,400,700,900">
 <!-- CSS:RESET -->
 	<link rel="stylesheet" href="vendor/css/normalize.css">
 <!-- CSS:ASSETS -->
@@ -43,8 +43,8 @@
 	<script src="vendor/js/angular-ui/angular-ui-router.js"></script>
 	<script src="vendor/js/angular-ui/angular-ui-ace.js"></script>
 <!-- JS:FIREBASE -->
-	<script src="https://cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
-	<!-- <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script> -->
+	<script src="//cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
+	<!-- <script src="//cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script> -->
 <!-- JS:FAMOUS
 	<script src="vendor/js/famous/famous-global.js"></script>
 	<script src="vendor/js/famous-angular/famous-angular.js"></script>
